# qingdan-desktop

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_HISTORY.md  PROJECT_CONSTRAINTS.md  V015_ACCEPTANCE.md  V015_CLOSEOUT.md  V020_ACCEPTANCE.md  V030_ACCEPTANCE.md  V040_ACCEPTANCE.md  V050_ACCEPTANCE.md  V1_ACCEPTANCE.md  WORKLOG.md  WORKLOG_ARCHIVE.md
docs/superpowers/plans/: 2026-04-16-v030-implementation-plan.md  2026-04-22-v040-implementation-plan.md  2026-04-24-v050-implementation-plan.md
docs/superpowers/specs/: 2026-04-11-v020-design.md  2026-04-15-v030-design.md  2026-04-22-v040-design.md  2026-04-24-v050-design.md
scaffold-temp/: package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  capabilities.test.ts  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  system.rs  tasks.rs
src-tauri/src/db/: mod.rs  tests.rs
src-tauri/src/models/: mod.rs
src-tauri/wix/: zh-CN.wxl
src/app/: AppShell.test.tsx  AppShell.tsx
src/components/: BackupCenter.test.tsx  BackupCenter.tsx  GlobalTaskSearch.test.tsx  GlobalTaskSearch.tsx  TaskComposer.tsx  TaskDetailDialog.test.tsx  TaskDetailDialog.tsx  TaskErrorDialog.tsx  TaskFeedbackToast.tsx  TaskGroupManager.tsx  TaskList.test.tsx  TaskList.tsx  TaskOverview.tsx  TaskReminderCenter.test.tsx  TaskReminderCenter.tsx  TaskSettings.test.tsx  TaskSettings.tsx
src/features/tasks/: task.bulk.ts  (+16 more)
src/lib/: date.ts
src/stores/: taskStore.test.ts  taskStore.ts
