# 文件说明：Tauri 桌面应用的 Cargo 配置，定义宿主层依赖和构建信息。

[package]
name = "qingdan-desktop"
version = "0.1.5"
description = "轻单桌面待办应用"
authors = ["Codex"]
edition = "2021"

[lib]
name = "qingdan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
